--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@cypress/code-coverage": "^1.11.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "cors": "^2.8.5",
     "cypress": "^3.8.3",
     "istanbul-lib-coverage": "^3.0.0",
     "mocha": "^5.0.0",
