--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
-    "cypress:coverage": "cypress run --headless"
+    "cypress:mochawesome:flag": "cypress run --headless --browser chrome --reporter mochawesome",
+    "cypress:run": "cypress run --headless --browser chrome"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,8 +35,6 @@
     ]
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^1.11.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "cors": "^2.8.5",
     "cypress": "^4.0.2",
     "istanbul-lib-coverage": "^3.0.0",
