--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,7 +17,7 @@
     "eject": "react-scripts eject",
     "cypress:open": "cypress open",
     "cypress:mochawesome:flag": "cypress run --headless --browser chrome --reporter mochawesome",
-    "cypress:run": "cypress run --headless --browser chrome"
+    "cypress:run": "cypress run --headless --browser chrome  --spec cypress/integration/**.spec.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,10 +35,12 @@
     ]
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^1.11.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "cors": "^2.8.5",
     "cypress": "^4.0.2",
     "istanbul-lib-coverage": "^3.0.0",
-    "mocha": "^5.0.0",
+    "mocha": "^5.2.0",
     "mochawesome": "^4.1.0",
     "nyc": "^15.0.0"
   }
