--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cypress:run": "cypress run --headless --browser chrome",
     "merge": "mochawesome-merge cypress/reports/mochawesome-report/*.json > cypress/reports/output.json",
     "generate_mochawesome_report": "marge cypress/reports/output.json --reportDir ./ --inline",
-    "delete_reports": "node deleteReports.js"
+    "delete_reports": "node deleteReports.js",
+    "cypress:unit": "cypress run --spec cypress/integration/unit/*"
   },
   "eslintConfig": {
     "extends": "react-app"
